Fix images on Safari

--- a/bundle-2.css
+++ b/bundle-2.css
@@ -254,6 +254,9 @@ body.betrayal-2e {
 	height: auto;
 	border: 0.4vh solid black;
 	border-radius: 0.4vh;
+	/*aspect-ratio: 1 / 1;*/
+	justify-self: flex-start;
+	object-fit: contain;
 }
 
 .betrayal-2e div.card .card-icon {
